[package]
name = "hyper-websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
hyper = "0.14.19"
hyper-tungstenite = "0.8.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["raw_value"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
